[gd_scene load_steps=5 format=3 uid="uid://brttdrokf78u5"]

[ext_resource type="Script" path="res://Ocean/healthPowerBars.gd" id="1_k6xi8"]
[ext_resource type="Theme" uid="uid://cn1usk00ydjpb" path="res://primary_theme.tres" id="1_midej"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6nj6u"]
bg_color = Color(1, 0.203922, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_837q0"]
bg_color = Color(0.043404, 0.680711, 0.720139, 1)

[node name="HealthPowerBars" type="HBoxContainer"]
offset_left = 475.0
offset_top = -345.0
offset_right = 605.0
offset_bottom = -201.96
alignment = 1
script = ExtResource("1_k6xi8")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_midej")
theme_override_styles/fill = SubResource("StyleBoxFlat_6nj6u")
value = 86.13
fill_mode = 3

[node name="PowerBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_midej")
theme_override_styles/fill = SubResource("StyleBoxFlat_837q0")
value = 100.0
fill_mode = 3
